<?xml version="1.0"?>
<package>
  <name>hansffa_experiments</name>
  <version>0.0.0</version>
  <description>The hansffa_experiments package</description>

  <maintainer email="hansffa@ifi.uio.no">hansffa</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dyret_common</build_depend>
  <build_depend>dyret_utils</build_depend>
  <build_depend>dyret_hardware</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dyret_common</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <export>
    <gazebo_ros
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.."/>
  </export>
</package>
